# bin-option-rust

./: Cargo.toml  Makefile.toml  README.md  docker-compose.yml  local-dev.env  local.env
.devcontainer/: devcontainer.json
.github/actions/build_image/: action.yml
.github/workflows/: rust.yml
common-lib/: Cargo.toml
common-lib/src/: error.rs  lib.rs  mysql.rs
common-lib/src/batch/: util.rs
common-lib/src/domain/: model.rs  service.rs
common-lib/src/mysql/: client.rs  model.rs  util.rs
config/: local.env  training-batch.env
data-clean-batch/: Cargo.toml
data-clean-batch/src/: config.rs  main.rs
docs/: forecast-server.yaml  overview.plantuml  rate-gateway.yaml
forecast-batch/: Cargo.toml
forecast-batch/src/: config.rs  main.rs
forecast-server/: Cargo.toml
forecast-server-lib/: Cargo.toml  README.md
forecast-server-lib/.openapi-generator/: FILES
forecast-server-lib/api/: openapi.yaml
forecast-server-lib/docs/: ForecastAfter30minRateIdModelNoGet200Response.md  ForecastAfter5minHistoryIdGet200Response.md  ForecastAfter5minRateIdGet200Response.md  ForecastAfter5minRateIdModelNoGet200Response.md  ForecastResult.md  HistoriesPost201Response.md  History.md  RatesPost201Response.md  rates_api.md
forecast-server-lib/examples/client/: main.rs
forecast-server-lib/examples/server/: main.rs  server.rs
forecast-server-lib/src/: lib.rs  models.rs
forecast-server-lib/src/client/: mod.rs
forecast-server-lib/src/server/: mod.rs
forecast-server/src/: config.rs  main.rs  server.rs
rate-gateway/: Cargo.toml
rate-gateway-lib/: Cargo.toml  README.md
rate-gateway-lib/.openapi-generator/: FILES
rate-gateway-lib/api/: openapi.yaml
rate-gateway-lib/docs/: Error.md  PostSuccess.md  Rate.md  rates_api.md
rate-gateway-lib/examples/client/: main.rs
rate-gateway-lib/examples/server/: main.rs  server.rs
rate-gateway-lib/src/: lib.rs  models.rs
rate-gateway-lib/src/client/: mod.rs
rate-gateway-lib/src/server/: mod.rs
rate-gateway/src/: config.rs  main.rs  server.rs
training-batch/: Cargo.toml
training-batch/src/: config.rs  ga.rs  main.rs  training.rs  util.rs
