[package]
name = "common-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
chrono = "0.4"
envy = "0.4"
log = "0.4.0"
mysql = "20.1"
serde = { version = "1.0", features = ["derive"] }
smartcore = { version = "0.2.0", features = ["serde"] }
thiserror = "1.0"
