[package]
name = "data-clean-batch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-lib = { path = "../common-lib" }

async-trait = "0.1.24"
chrono = "0.4"
env_logger = "0.8.3"
envy = "0.4"
job_scheduler = "*"
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.14", features = ["full"] }
