[package]
name = "forecast-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-lib = { path = "../common-lib" }
forecast-server-lib = { path = "../forecast-server-lib" }

async-trait = "0.1.24"
chrono = "0.4"
env_logger = "0.8.3"
envy = "0.4"
hyper = {version = "0.14"}
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
swagger = { version = "6.1", features = ["serdejson", "server", "client", "tls", "tcp"] }
tokio = { version = "1.14", features = ["full"] }
